Fixed text selection color not changing based on selected theme and WIP page text formatting when on small screen

--- a/pages/projects/style.css
+++ b/pages/projects/style.css
@@ -64,7 +64,7 @@ a:hover {
 }
 
 ::selection {
-    background: #B09AA1;
+    background: var(--hover);
 }
 
 .default-box {
@@ -186,6 +186,8 @@ a:hover {
 }
 
 .main span {
+    text-align: center;
+    
     margin-bottom: 25px;
 }
 
