--- a/pages/skills/style.css
+++ b/pages/skills/style.css
@@ -64,7 +64,7 @@ a:hover {
 }
 
 ::selection {
-    background: #B09AA1;
+    background: var(--hover);
 }
 
 .default-box {
