--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
 }
 
 ::selection {
-    background: #B09AA1;
+    background: var(--hover);
 }
 
 .default-box {
